removed width in author and alignment in quote in struggle to fix text location

--- a/odinsite1/styles.css
+++ b/odinsite1/styles.css
@@ -26,6 +26,10 @@ header {
     
 }
 
+.half1 {
+    justify-self: flex-start;
+}
+
 #house {
     display: flex;
     width: 200px;
@@ -88,7 +92,6 @@ figcaption {
 .quote {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     background-color:#e5e7eb;
     font-size: 36px;
     color: #1F2937;
@@ -98,9 +101,8 @@ figcaption {
 
 #author {
     display: flex;
-    justify-self:flex-right;
+    align-self:flex-end;
     font-weight: bold;
-    width: 400px;
     background-color:#e5e7eb;
     font-size: 36px;
 }
